wip: additional topics outlined

--- a/doc/iHaskell-Notebooks/Features/01 - Introduction.ipynb
+++ b/doc/iHaskell-Notebooks/Features/01 - Introduction.ipynb
@@ -1095,7 +1095,7 @@
    "source": [
     "Up to this point we've been dealing with things that either definitly (if eventaually) occur or never occur. \n",
     "It is as this point we step through the looking glass and incorporate the notion may be a mixture of things that take time to occur along with a possibility of not occuring. \n",
-    "We are going to bring together both notion of taking time and 'failing' (or some other notion of non-occurance)\n"
+    "We are going to bring together both notion of taking time and 'failing' (or some other notion of non-occurance)"
    ]
   },
   {
