wip: more material

--- a/doc/iHaskell-Notebooks/Features/01 - Introduction.ipynb
+++ b/doc/iHaskell-Notebooks/Features/01 - Introduction.ipynb
@@ -1555,7 +1555,13 @@
   {
    "cell_type": "markdown",
    "id": "0556298a-0ad1-4b89-9c48-413afb05bcc5",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Can we create more certainty of (at least some form of) and outcome?\n",
     "What if we introduce a first-to-finish with some timeout? say 5s?"
