--- a/doc/iHaskell-Notebooks/Features/03 - Mitigating Failure.ipynb
+++ b/doc/iHaskell-Notebooks/Features/03 - Mitigating Failure.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d4847d87-a06d-44b5-81e5-77b7748ce367",
    "metadata": {
+    "editable": true,
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -34,6 +39,26 @@
     " (early) timeouts with 'residuals'\n",
     " -- modelling large scale excursions from the normal response\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3d06b47-7c9e-4208-97c9-30e8a9438580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "branchOnTimeout :: DeltaQ o => Duration o -> o -> (o,o) -> o\n",
+    "branchOnTimeout t before (ok,timedout) \n",
+    " = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da03eb80-dfb5-4288-a323-591e2ed9c450",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
