--- a/doc/iHaskell-Notebooks/Features/01 - Introduction.ipynb
+++ b/doc/iHaskell-Notebooks/Features/01 - Introduction.ipynb
@@ -2038,7 +2038,7 @@
     }
    ],
    "source": [
-    "o10 = o9 .\\/. wait 5\n",
+    "o10 = o9 `firstToFinish` wait 5\n",
     "(\"bounds o10\", asFloat <$> earliest o10, asFloat <$> deadline o10)\n",
     "(\"median o10\", asFloat <$> quantile 0.5 o10)\n",
     "(\"90th centile o10\", asFloat <$> quantile 0.9 o10)\n",
