pwt spelling run

--- a/doc/iHaskell-Notebooks/Features/03 - Imperfection.ipynb
+++ b/doc/iHaskell-Notebooks/Features/03 - Imperfection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "499af9c2-be34-4531-9aaa-6d92e3e84964",
    "metadata": {
     "editable": true,
@@ -20,9 +20,9 @@
     "-- ∆Q using Rational\n",
     "--\n",
     "import DeltaQ\n",
-    "--\n",
-    "-- additional libraries (plotting) - likely to move\n",
-    ":l ../../additional-tools/PlottingSupport\n",
+    "\n",
+    "-- needed for visualisation within iHaskell\n",
+    "import Graphics.Rendering.Chart.Renderable\n",
     "\n",
     "-- useful for rendering Rationals with 'just enough' precision\n",
     "asFloat :: Rational -> Float\n",
@@ -37,7 +37,7 @@
     "# Capturing non-completion\n",
     "\n",
     "## Observables and Outcomes\n",
-    "Outcomes are the measurement of time from a _starting observable_ to a _terminating observable_, \n",
+    "Outcome durations are the measurement of time from a _starting observable_ to a _terminating observable_, \n",
     "while admitting that the terminating observable may not occur, in both cases the observables could\n",
     "elements from some non-empty set.\n",
     "\n",
@@ -49,14 +49,14 @@
     "Adding the notion of timing to observables can be done, again conceptually, in two ways:\n",
     "  1) Having some conceptual stopwatch that commences with the starting observable and ends\n",
     "     with the terminating observable. The operation of the stopwatch being instantaneous.\n",
-    "  2) Associating a timestamp with the observables and taking their difference. There is the\n",
-    "     set of concerns around measurement in different clock domains.\n",
+    "  2) Associating a timestamp with the observables and taking their difference. This is subject to \n",
+    "     concerns around measurement in different clock domains (clock skew, drift etc.).\n",
     "\n",
-    "In both cases the detection of non-completion is needed. \n",
+    "In both cases detection of non-completion is needed. \n",
     "In some cases failure might be explicit (and as such a suitable 'failed' observable\n",
     "present in the terminating obserable set), but that is not the general case.\n",
     "\n",
-    "This brings up the general point about outcomes, they have a finite period of usefullness.\n",
+    "This brings up the general point about outcomes, that they have a finite period of usefullness.\n",
     "It may be long (before the heat death of the universe) or much shorter - but they are finite.\n",
     "Processing timestamped observables requires some upper bound to declare the outcome `Abandoned`, \n",
     "the same applies in the conceptual stopwatch case. \n",
@@ -69,12 +69,12 @@
    "id": "273c2f3e-e2ab-4f97-8f99-a077ac9316b6",
    "metadata": {},
    "source": [
-    "##  Mitigation and propergation\n",
+    "##  Mitigation and propagation\n",
     "\n",
     "- representing `Abandonment`\n",
     "- representing non-completion as a probablistic choice - qualifying and quantifying uncertainty\n",
     "- how abandonment propagates through operators, how the operators correspond with intution and real-world\n",
-    "- the role of a 'top level' outcome and how sub-outcomes can decide to propergate or mitigate their abandonment"
+    "- the role of a 'top level' outcome and how sub-outcomes can decide to propagate or mitigate their abandonment"
    ]
   },
   {
