--- a/doc/iHaskell-Notebooks/Features/04 - Mitigating Failure.ipynb
+++ b/doc/iHaskell-Notebooks/Features/04 - Mitigating Failure.ipynb
@@ -20,9 +20,9 @@
     "-- ∆Q using Rational\n",
     "--\n",
     "import DeltaQ\n",
-    "--\n",
-    "-- additional libraries (plotting) - likely to move\n",
-    ":l ../../additional-tools/PlottingSupport\n",
+    "\n",
+    "-- needed for visualisation within iHaskell\n",
+    "import Graphics.Rendering.Chart.Renderable\n",
     "\n",
     "-- useful for rendering Rationals with 'just enough' precision\n",
     "asFloat :: Rational -> Float\n",
